<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_list_all_posts"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:title="@string/title_list_all_posts" />

    <item
        android:id="@+id/navigation_list_photos"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_list_photos" />

    <item
        android:id="@+id/navigation_create_post"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/title_create_post" />

    <item
        android:id="@+id/navigation_update_post"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/title_update_post" />

</menu>
