<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lab3.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list_all_posts"
        android:name="com.example.lab3.ui.listAllPosts.ListAllPostsFragment"
        android:label="@string/title_list_all_posts"
        tools:layout="@layout/fragment_list_all_posts" />

    <fragment
        android:id="@+id/navigation_list_photos"
        android:name="com.example.lab3.ui.listPhotos.ListPhotosFragment"
        android:label="@string/title_list_photos"
        tools:layout="@layout/fragment_list_photos" />

    <fragment
        android:id="@+id/navigation_create_post"
        android:name="com.example.lab3.ui.createPost.CreatePostFragment"
        android:label="@string/title_create_post"
        tools:layout="@layout/fragment_create_post" />

    <fragment
        android:id="@+id/navigation_update_post"
        android:name="com.example.lab3.ui.updatePost.UpdatePostFragment"
        android:label="@string/title_update_post"
        tools:layout="@layout/fragment_update_post" />


</navigation>
